tests/baselines/reference/constructorAsType.errors.txt
tests/cases/compiler/constructorAsType.ts(1,5): error TS2322: Type '() => { name: string; }' is not assignable to type 'new () => { name: string; }'.
  Signature 'new (): { name: string; }' has no corresponding signature in '() => { name: string; }'


==== tests/cases/compiler/constructorAsType.ts (1 errors) ====
    var Person:new () => {name: string;} = function () {return {name:"joe"};};
        ~~~~~~
!!! error TS2322: Type '() => { name: string; }' is not assignable to type 'new () => { name: string; }'.
!!! error TS2322:   Signature 'new (): { name: string; }' has no corresponding signature in '() => { name: string; }'
    
    var Person2:{new() : {name:string;};};
    
    Person = Person2;